Fixed top bar dark mode

--- a/apps/client/src/routes/Project/Project.module.css
+++ b/apps/client/src/routes/Project/Project.module.css
@@ -6,6 +6,7 @@
 
 .tabs {
 	height: 2.5rem;
+	margin-top: 0.5rem;
 }
 
 .tab {
